fix for side nav overlapping links

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,8 +77,6 @@ footer a:hover {
 .slidingMenu {
     position: relative;
     height:550px;
-    width: 410px;
-    overflow:hidden;
     right:50px;
     font-family: Arial, Helvetica, sans-serif;
 }
